# photographic-memory

./: .gitignore  AGENTS.md  CLONE_CONTEXT.md  CLONE_FEATURES.md  Cargo.toml  INCIDENTS.md  PRODUCT_ROADMAP.md  PROJECT_MEMORY.md  README.md  context.md  context.template.md  features.md  readme.md  todo.md
.github/workflows/: ci.yml
docs/: idle-autopause-design.md  privacy-controls-design.md
scripts/: install-launch-agent.sh  run-menubar.sh  smoke.sh  uninstall-launch-agent.sh
src/: activity_watch.rs  analysis.rs  context_log.rs  engine.rs  lib.rs  main.rs  paths.rs  permission_watch.rs  permissions.rs  privacy.rs  scheduler.rs  screenshot.rs  scroll_capture.rs  storage.rs  system_activity.rs
