[package]
name = "photographic-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
global-hotkey = "0.7.0"
humantime = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tao = "0.34.5"
tokio = { version = "1.44", features = ["full", "test-util"] }
tray-icon = "0.21.3"

[dev-dependencies]
tempfile = "3.18"
